bpo-30061: Check if PyObject_Size()/PySequence_Size()/PyMapping_Size() raised an error.

Replace them with using concrete types API that never fails if appropriate.