Modules/_io/iobase.c
@@ -618,7 +618,8 @@ iobase_iternext(PyObject *self)
     if (line == NULL)
         return NULL;
 
-    if (PyObject_Size(line) == 0) {
+    if (PyObject_Size(line) <= 0) {
+        /* Error or empty */
         Py_DECREF(line);
         return NULL;
     }
@@ -667,6 +668,7 @@ _io__IOBase_readlines_impl(PyObject *self, Py_ssize_t hint)
 
     while (1) {
         PyObject *line = PyIter_Next(self);
+        Py_ssize_t line_length;
         if (line == NULL) {
             if (PyErr_Occurred()) {
                 Py_DECREF(result);
@@ -681,11 +683,15 @@ _io__IOBase_readlines_impl(PyObject *self, Py_ssize_t hint)
             Py_DECREF(result);
             return NULL;
         }
-        length += PyObject_Size(line);
+        line_length = PyObject_Size(line);
         Py_DECREF(line);
-
-        if (length > hint)
+        if (line_length < 0) {
+            Py_DECREF(result);
+            return NULL;
+        }
+        if (line_length > hint - length)
             break;
+        length += line_length;
     }
     return result;
 }
